@@ -1,3 +1,10 @@
+2010-11-23  Ivan Maidanski <ivmai@mail.ru> (really Michael Hope)
+
+	* src/atomic_ops/sysdeps/armcc/arm_v6.h (AO_compare_and_swap):
+	Insert "it eq" just before "strexeq" (required for Thumb-2 mode,
+	ignored in ARM mode).
+	* src/atomic_ops/sysdeps/gcc/arm.h (AO_compare_and_swap): Ditto.
+
 2010-09-15  Ivan Maidanski <ivmai@mail.ru> (with input from Gregory Farnum)
 
 	* src/atomic_ops.h: Include armcc/arm_v6.h if __ARMCC__.
